--- a/Parte1/index.html
+++ b/Parte1/index.html
@@ -1,27 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Práctica 4.5 - Flexbox</title>
+    <title>Diseño Flexbox</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-        <!-- Header -->
-        <header class="header">header</header>
-        <!-- Contenedor de tres columnas -->
+        <div class="header">header</div>
         <div class="main">
-            <!-- Navegación -->
-            <nav class="nav">nav</nav>
-            <!-- Contenido principal -->
-            <article class="article">article</article>
-            <!-- Barra lateral -->
-            <aside class="aside">aside</aside>
+            <div class="nav">nav</div>
+            <div class="article">article</div>
+            <div class="aside">aside</div>
         </div>
-        <!-- Footer -->
-        <footer class="footer">footer</footer>
+        <div class="footer">footer</div>
     </div>
 </body>
+
 </html>
