--- a/Parte2/index.html
+++ b/Parte2/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="gallery">
+        <h1>Galería Responsive Flexbox</h1>
         <div class="image-container">
             <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
             <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
