--- a/Parte2/index.html
+++ b/Parte2/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería de Imágenes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="gallery">
         <h1>Galería Responsive Flexbox</h1>
         <div class="image-container">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            
         </div>
         <div class="image-container">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            
         </div>
         <div class="image-container">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
-            <img src="https://loremflickr.com/320/240" alt="Imagen aleatoria">
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
+            <div class="image"><img src="https://loremflickr.com/320/240" alt="Imagen aleatoria"></div>
         </div>
     </div>
 </body>
-
 </html>
